--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ plugins {
 }
 
 android {
-    namespace 'com.example.foorballapp'
+    namespace 'com.myapp.minifootballstats' // Update to the new namespace
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.foorballapp"
+        applicationId "com.myapp.minifootballstats" // Update to the new applicationId
         minSdk 25
         targetSdk 33
         versionCode 1
@@ -41,15 +41,12 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:22.1.1'
     implementation 'com.google.firebase:firebase-storage:20.2.1'
     implementation 'com.google.firebase:firebase-firestore:24.7.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    //implementation 'com.google.firebase:firebase-auth:23.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.2.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
     implementation 'androidx.recyclerview:recyclerview:1.3.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-
 }
 
 apply plugin: 'com.google.gms.google-services'
